--- a/QuickBookOauth/Properties/launchSettings.json
+++ b/QuickBookOauth/Properties/launchSettings.json
@@ -10,7 +10,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:44306",
+      "applicationUrl": "https://localhost:44306",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
